--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:hCRSdX+w19aa19UmXnZPmJw0tdmtdtDCZXEF5LcQ2gI=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=university
+DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
